--- a/frontend/scss/state/_s-sticky-sidebar.scss
+++ b/frontend/scss/state/_s-sticky-sidebar.scss
@@ -14,6 +14,10 @@ For _p-issuearticle-show.scss and _p-issue-show.scss
 
   .o-sticky-sidebar__sticker {
     height: 100vh;
+
+    @include breakpoint('small-') {
+      height: max-content;
+    }
   }
 
   &.is-sidebar-overlay {
